# ssh-tunnel-panel-native

./: .gitignore  AGENTS.md  Cargo.toml  Packager.toml  README.md  README.zh-CN.md  build.rs
docs/: RELEASE_NOTES_0.2.0.md  SPEC.md
scripts/: cargo.ps1  package.ps1
src/: app.rs  assets.rs  lib.rs  main.rs  manager.rs  model.rs  ports.rs  single_instance.rs  ssh_config.rs  store.rs  tray.rs  tunnel.rs  ui.rs  window_visibility.rs
src/platform/: mod.rs
src/platform/windows/: mod.rs  single_instance.rs  window_visibility.rs
