[package]
name = "ssh-tunnel-panel"
version = "0.2.0"
edition = "2024"
rust-version = "1.97"
description = "A native Windows SSH port-forwarding panel built with Rust and GPUI."
license = "MIT"
repository = "https://github.com/tyx3211/ssh-tunnel-panel-native"
build = "build.rs"

[features]
default = ["ui"]
ui = [
    "dep:gpui",
    "dep:gpui-component",
    "dep:gpui-component-assets",
    "dep:raw-window-handle",
    "dep:tray-icon",
    "dep:windows",
]

[dependencies]
async-channel = "2.5"
atomic-write-file = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dirs = "6"
gpui = { version = "0.2.2", optional = true }
gpui-component = { version = "0.5.1", optional = true }
gpui-component-assets = { version = "0.5.1", optional = true }
raw-window-handle = { version = "0.6", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2-config = "0.7"
thiserror = "2"
tray-icon = { version = "0.24", default-features = false, features = ["common-controls-v6"], optional = true }
uuid = { version = "1", features = ["v4"] }
win32job = "2"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"], optional = true }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
embed-resource = "3"

[[bin]]
name = "ssh-tunnel-panel"
path = "src/main.rs"
required-features = ["ui"]

[lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
too_many_lines = "allow"
unwrap_used = "deny"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
incremental = false
panic = "abort"
strip = "symbols"

[profile.dev.package.gpui]
opt-level = 3

[profile.dev.package.resvg]
opt-level = 3

[profile.dev.package.rustybuzz]
opt-level = 3

[profile.dev.package.smol]
opt-level = 3

[profile.dev.package.taffy]
opt-level = 3

[profile.dev.package.ttf-parser]
opt-level = 3
